Fix issue with overflowing container box

--- a/src/less/site.less
+++ b/src/less/site.less
@@ -61,6 +61,10 @@ textarea, input {
     padding: 0;
     overflow: hidden;
     background-color: #fff;
+
+    @media (max-width : @screen-md-max) {
+      width: 100%;
+    }
   }
 
   .detalii, .pasi {
